# agentic-ai-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  weekly-sdk-check.yml
1-interaction-loop/: README.md  chat_loop.py  requirements.txt  start.sh
2-tool-use/: README.md  start.sh  tool_agent.py
3-reasoning-react/: README.md  react_agent.py  requirements.txt  start.sh
4-memory-context/: README.md  memory_agent.py  requirements.txt  start.sh
5-rag/: README.md  rag_agent.py  requirements.txt  start.sh
scripts/: health_check.py
tests/: __init__.py  conftest.py  test_api_smoke.py  test_static.py
