[project]
name = "agentic-ai-from-scratch"
version = "1.0.0"
description = "A hands-on workshop to learn the first principles of AI agent architecture"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "static: Tests that don't require an API key (syntax, imports, file checks)",
    "api_smoke: Tests that verify OpenAI API patterns work (~$0.01 total)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
